# evalSDK

./: ARCHITECTURE.md  FUTURE_ROADMAP.md  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  test.py  test2.py  test3_llm.py  test_mnb.py  test_mnb_llm.py
experiment_sdk/: __init__.py  artifacts.py  constants.py  estimation.py  evaluation.py  exceptions.py  io.py  metrics.py  preview.py  schemas.py  session.py  utils.py  validation.py
results/: artifacts.json  evaluation.parquet  metrics.json
tests/: test_classification.py  test_columns.py  test_metrics.py  test_preview.py  test_regression.py  test_validation.py
