[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "experiment-sdk"
version = "0.1.0"
description = "A standalone SDK for standardizing ML experiment outputs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "pyarrow>=10.0.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["experiment_sdk"]

[tool.pytest.inioptions]
testpaths = ["tests"]
